--- a/Preprocessing pour les ages.ipynb
+++ b/Preprocessing pour les ages.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Erreur : Le fichier 'train.csv' est introuvable.\n"
+      "Données chargées avec succès.\n"
      ]
     }
    ],
@@ -35,19 +35,7 @@
    "execution_count": 2,
    "id": "979e2a5b",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# 1. Suppression des colonnes non informatives pour le modèle\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mdrop([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPassengerId\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mName\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTicket\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCabin\u001b[39m\u001b[38;5;124m'\u001b[39m], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# 2. Nettoyage des lignes avec des valeurs manquantes critiques (hors Age)\u001b[39;00m\n\u001b[0;32m      5\u001b[0m df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mdropna(subset\u001b[38;5;241m=\u001b[39m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mEmbarked\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFare\u001b[39m\u001b[38;5;124m'\u001b[39m])\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1. Suppression des colonnes non informatives pour le modèle\n",
     "df = df.drop(['PassengerId', 'Name', 'Ticket', 'Cabin'], axis=1)\n",
@@ -64,8 +52,279 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "81bd1dd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\louis\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1446: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=3.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Moyennes d'âge par cluster calculées.\n",
+      "Imputation terminée. Valeurs manquantes restantes : 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Préparation des données pour le clustering ---\n",
+    "# On exclut 'Survived' (le target) et 'Age' (ce qu'on cherche) des features de clustering\n",
+    "features_clustering = [col for col in df.columns if col not in ['Age', 'Survived']]\n",
+    "\n",
+    "df_age_connu = df[df['Age'].notnull()].copy()\n",
+    "df_age_manquant = df[df['Age'].isnull()].copy()\n",
+    "\n",
+    "# --- Mise à l'échelle (Standardisation) ---\n",
+    "scaler = StandardScaler()\n",
+    "X_connu_scaled = scaler.fit_transform(df_age_connu[features_clustering])\n",
+    "X_manquant_scaled = scaler.transform(df_age_manquant[features_clustering])\n",
+    "\n",
+    "# --- Entraînement du K-Means ---\n",
+    "K_optimal = 10  # Vous pouvez ajuster ce nombre\n",
+    "kmeans = KMeans(n_clusters=K_optimal, random_state=42, n_init=10)\n",
+    "df_age_connu['Cluster'] = kmeans.fit_predict(X_connu_scaled)\n",
+    "\n",
+    "# --- Calcul des moyennes d'âge par cluster ---\n",
+    "moyenne_age_par_cluster = df_age_connu.groupby('Cluster')['Age'].mean()\n",
+    "print(\"Moyennes d'âge par cluster calculées.\")\n",
+    "\n",
+    "# --- Prédiction et Imputation ---\n",
+    "clusters_predits = kmeans.predict(X_manquant_scaled)\n",
+    "df_age_manquant['Age'] = [moyenne_age_par_cluster[c] for c in clusters_predits]\n",
+    "\n",
+    "# --- Réassemblage du DataFrame final ---\n",
+    "df_final = pd.concat([df_age_connu.drop(columns='Cluster'), df_age_manquant])\n",
+    "df_final = df_final.sort_index()\n",
+    "\n",
+    "print(f\"Imputation terminée. Valeurs manquantes restantes : {df_final['Age'].isnull().sum()}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "43562247",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Survived</th>\n",
+       "      <th>Pclass</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>SibSp</th>\n",
+       "      <th>Parch</th>\n",
+       "      <th>Fare</th>\n",
+       "      <th>Embarked_Q</th>\n",
+       "      <th>Embarked_S</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.2500</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>38.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>71.2833</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.9250</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>53.1000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8.0500</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13.0000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>887</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>888</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>25.947073</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23.4500</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>889</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30.0000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>890</th>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7.7500</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>889 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Survived  Pclass  Sex        Age  SibSp  Parch     Fare  Embarked_Q  \\\n",
+       "0           0       3    0  22.000000      1      0   7.2500       False   \n",
+       "1           1       1    1  38.000000      1      0  71.2833       False   \n",
+       "2           1       3    1  26.000000      0      0   7.9250       False   \n",
+       "3           1       1    1  35.000000      1      0  53.1000       False   \n",
+       "4           0       3    0  35.000000      0      0   8.0500       False   \n",
+       "..        ...     ...  ...        ...    ...    ...      ...         ...   \n",
+       "886         0       2    0  27.000000      0      0  13.0000       False   \n",
+       "887         1       1    1  19.000000      0      0  30.0000       False   \n",
+       "888         0       3    1  25.947073      1      2  23.4500       False   \n",
+       "889         1       1    0  26.000000      0      0  30.0000       False   \n",
+       "890         0       3    0  32.000000      0      0   7.7500        True   \n",
+       "\n",
+       "     Embarked_S  \n",
+       "0          True  \n",
+       "1         False  \n",
+       "2          True  \n",
+       "3          True  \n",
+       "4          True  \n",
+       "..          ...  \n",
+       "886        True  \n",
+       "887        True  \n",
+       "888        True  \n",
+       "889       False  \n",
+       "890       False  \n",
+       "\n",
+       "[889 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cea9b885",
    "metadata": {},
    "outputs": [],
    "source": []
